fix: update primary and secondary color variables for Contrast Errors

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 /* src/components/header/header.css */
 
 :root {
-  --color-primary: #85b100;
+  --color-primary: #547000;
   --color-primary-dark: #15803d;
   --color-black: #000000;
   --color-white: #ffffff;
