--- a/src/components/Typography/Typography.css
+++ b/src/components/Typography/Typography.css
@@ -3,7 +3,7 @@
     --font-family: arial, sans-serif; 
     --color-text: #000;
     --color-link-primary: #000000;
-    --color-link-secondary: #85B100;
+    --color-link-secondary: #547000;
   }
   
   /* Reset */
